--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
+    "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.0",
     "cloudinary": "^1.25.0",
@@ -12,9 +13,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
+    "qs": "^6.10.1",
     "request": "^2.88.2",
     "sharp": "^0.28.0",
     "socket.io": "^3.1.2",
+    "uuid": "^8.3.2",
     "validator": "^13.5.2"
   },
   "devDependencies": {
@@ -32,7 +35,8 @@
     "dev": "env-cmd -f ./config/dev.env nodemon src/index"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "verbose": true
   },
   "author": "Philz Stizles",
   "license": "ISC"
